--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+  text-align: center;
   box-sizing: border-box;
 }
 body {
@@ -136,4 +137,11 @@ body {
 
 .option:hover {
   background-color: #f1f1f1;
+}
+#losting {
+  position: absolute;
+  left: 3.02%;
+  right: 93.17%;
+  top: 4.58%;
+  bottom: 85.42%;
 }
