--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 * {
-  text-align: center;
   box-sizing: border-box;
 }
 body {
@@ -38,6 +37,7 @@ body {
   gap: 20px;
   margin: 10px;
   align-items: center;
+  cursor: pointer;
 }
 
 .icon-wrap div img {
@@ -77,47 +77,34 @@ body {
   margin: 0px 10px;
 }
 /* 알림 팝업 */
-#alertPopup {
-  width: 650px;
-  height: 500px;
+#filterPopUp {
+  width: 40%;
+  height: 300px;
   left: 1132px;
   top: 138px;
   background: #ffffff;
   border: 2px solid gray;
   border-radius: 15px;
+  padding: 20px;
 }
 /* 숨김 */
 .hidden {
   display: none;
 }
 
-#alertFrame {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  align-content: center;
-  padding: 0px;
-  gap: 15px;
-  position: absolute;
-  width: 630px;
-  height: 240px;
-  left: 10px;
-  top: 127px;
-}
-
-#alertPopup {
-  padding: 20px;
-}
-
 .selected {
-  padding: 10px;
+  padding: 5px;
   border: 2px solid #ccc;
   border-radius: 5px;
   cursor: pointer;
   background-color: white;
-  width: 20%;
+  width: 120px;
+  height: 34px;
+  min-width: 120px;
+  text-align: center;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 
 .options {
@@ -127,7 +114,7 @@ body {
   border-radius: 5px;
   margin-top: 5px;
   z-index: 1;
-  width: 20%;
+  width: 120px;
 }
 
 .option {
@@ -144,4 +131,21 @@ body {
   right: 93.17%;
   top: 4.58%;
   bottom: 85.42%;
+}
+.pop {
+  width: 24px;
+  height: 24px;
+}
+.frame {
+  display: flex;
+  gap: 10px;
+  justify-content: space-around;
+  align-items: center;
+}
+#alert {
+  width: 20%;
+  height: 300px;
+  left: 2457px;
+  top: 441px;
+  border: 1px solid gray;
 }
