feat: writing Btn fix: 알림창

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 * {
   box-sizing: border-box;
 }
-body {
-  margin: 0;
-}
+
 .topBar {
   min-width: 600px;
 }
@@ -57,7 +55,6 @@ body {
   text-align: center;
 }
 
-/* background color */
 .input-wrap div {
   display: flex;
   background: #eeeeee;
@@ -83,7 +80,7 @@ body {
   left: 1132px;
   top: 138px;
   background: #ffffff;
-  border: 2px solid gray;
+  border: 1px solid gray;
   border-radius: 15px;
   padding: 20px;
 }
@@ -142,10 +139,38 @@ body {
   justify-content: space-around;
   align-items: center;
 }
+/* 알림창 */
 #alert {
   width: 20%;
   height: 300px;
   left: 2457px;
   top: 441px;
   border: 1px solid gray;
+}
+body {
+  margin: 0;
+}
+.body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+.container {
+  width: 600px;
+}
+.writing {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+@media (max-width: 600px) {
+  .writing {
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 20px;
+  }
 }
