feat: 팝업창 버튼 추가

--- a/style.css
+++ b/style.css
@@ -180,3 +180,27 @@ body {
   right: 160px;
   top: 70px;
 }
+
+.edit {
+  width: 70px;
+  height: 30px;
+  background: #7e8ef1;
+  border-radius: 40px;
+  color: white;
+  border: none;
+  font-weight: bold;
+  font-size: 20px;
+  position: relative;
+  top: 180px;
+  left: 250px;
+}
+
+@media (max-width: 600px) {
+  .edit {
+    width: 60px;
+    height: 25px;
+    font-size: 16px;
+    top: 180px;
+    left: 100px;
+  }
+}
