--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@
 }
 /* 알림창 */
 #alert {
-  width: 20%;
+  width: 200px;
   height: 300px;
   border: 1px solid gray;
   border-radius: 15px;
@@ -173,7 +173,9 @@ body {
     bottom: 20px;
   }
 }
-
+input:focus {
+  outline: none;
+}
 #filterPopUp,
 #alert {
   position: absolute;
