--- a/signup/signup.css
+++ b/signup/signup.css
@@ -1,4 +1,3 @@
-html,
 body {
   display: flex;
   justify-content: center;
@@ -6,7 +5,7 @@ body {
 }
 
 .container {
-  margin: 20px;
+  margin: 150px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -95,4 +94,10 @@ img {
 
 .hidden {
   display: none;
+}
+#email {
+  width: 400px;
+  height: 40px;
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
