--- a/signup/signup.css
+++ b/signup/signup.css
@@ -34,9 +34,9 @@ img {
   padding: 2px 5px;
   border: 1px solid #d8d8d8;
   width: 400px;
-  height: 40px;
-  margin-bottom: 12px;
-  margin-top: 12px;
+  height: 35px;
+  margin-bottom: 0;
+  margin-top: 8px;
 }
 
 .button {
@@ -96,4 +96,14 @@ img {
 
 .hidden {
   display: none;
+}
+.error-message-hidden {
+  color: #df454a;
+  font-size: small;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
