--- a/login/login.css
+++ b/login/login.css
@@ -42,7 +42,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 12vh;
+  margin-top: 5vh;
 }
 
 #bu {
@@ -105,4 +105,12 @@ form {
   flex-direction: column;
   align-items: center;
   gap: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #3269f6;
+}
+#question {
+  color: #8f9094;
 }
