--- a/chating/chating.css
+++ b/chating/chating.css
@@ -84,10 +84,11 @@ body {
   height: 300px;
   border: 1px solid gray;
   border-radius: 15px;
+  background-color: white;
 }
 .container {
   width: 600px;
-  border: 1px solid gray;
+  border: 2px solid #cbccce;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -159,4 +160,6 @@ input:focus {
 #previous {
   width: 24px;
   height: 24px;
+  cursor: pointer;
+  margin: 10px;
 }
