feat: profileBtn 경로

--- a/chating/chating.css
+++ b/chating/chating.css
@@ -130,6 +130,7 @@ input:focus {
   height: 24px;
   padding: 10px;
   padding-right: 0;
+  cursor: pointer;
 }
 .chating-container {
   display: flex;
