--- a/chating/chating.css
+++ b/chating/chating.css
@@ -144,8 +144,11 @@ input:focus {
   gap: 50px;
 }
 .each {
+  border-top-left-radius: 0;
   list-style: none;
-  border-radius: 16px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+  border-top-right-radius: 16px;
   background-color: #7e8ef1;
   padding: 5px;
   color: white;
